[gd_scene load_steps=9 format=2]

[ext_resource path="res://Objects/actors/PurpleWell.gd" type="Script" id=1]
[ext_resource path="res://Objects/actors/obj_GravityRange.tscn" type="PackedScene" id=2]
[ext_resource path="res://Resources/img_purplewell.png" type="Texture" id=3]
[ext_resource path="res://Resources/Sounds/sfx_purple_pull.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 5.74431

[sub_resource type="Gradient" id=2]

offsets = PoolRealArray( 0.236686, 1 )
colors = PoolColorArray( 0.875, 0, 1, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=3]

flags = 4
gradient = SubResource( 2 )
width = 2048

[sub_resource type="ParticlesMaterial" id=4]

render_priority = 0
trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 1.0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 15.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.0
scale_random = 0.0
color_ramp = SubResource( 3 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angle", "Angular Velocity", "Animation", "Color", "Damping", "Emission Shape", "Gravity", "Hue Variation", "Initial Velocity", "Linear Accel", "Orbit Velocity", "Radial Accel", "Scale", "Spread", "Tangential Accel" ]

[node name="PurpleWell" type="Area2D" groups=[
"well",
"destructable",
]]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="GravityRange" parent="." index="1" instance=ExtResource( 2 )]

modulate = Color( 0.968627, 0.431373, 1, 1 )

[node name="Particle2D" type="Particles2D" parent="." index="2"]

scale = Vector2( 2, 2 )
emitting = true
amount = 45
lifetime = 1.5
one_shot = false
preprocess = 0.0
speed_scale = 4.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 4 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Transform", "Z Index" ]

[node name="Sprite" type="Sprite" parent="." index="3"]

texture = ExtResource( 3 )

[node name="sfxPull" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 4 )
volume_db = 10.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="area_entered" from="GravityRange" to="." method="_on_GravityRange_area_entered"]

[connection signal="area_exited" from="GravityRange" to="." method="_on_GravityRange_area_exited"]

[connection signal="sfx_finished" from="GravityRange" to="." method="_on_GravityRange_sfx_finished"]

[connection signal="finished" from="sfxPull" to="." method="_on_sfxPull_finished"]


